// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms|Avatar different error states 1`] = `
Array [
  .c0 {
  height: 3rem;
  width: 3rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 3rem;
  width: 5.699999999999999rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 4.32rem;
  width: 3.3000000000000003rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 4.32rem;
  width: 3.3000000000000003rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 3rem;
  width: 4.5rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 5.4rem;
  width: 3rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
]
`;

exports[`Storyshots Atoms|Avatar different sizes 1`] = `
Array [
  .c0 {
  height: 3rem;
  width: 3rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 6rem;
  width: 6rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 10rem;
  width: 10rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
  .c0 {
  height: 15rem;
  width: 15rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
    className="c0"
    onClick={[Function]}
  />,
]
`;

exports[`Storyshots Atoms|Avatar playground 1`] = `
.c0 {
  height: 6rem;
  width: 6rem;
  background: url(test-file-stub) no-repeat top left;
  background-color: transparent;
  background-size: contain;
  box-sizing: border-box;
}

<div
  className="c0"
  onClick={[Function]}
/>
`;

exports[`Storyshots Atoms|Backdrop different directions 1`] = `
.c0 {
  display: block;
  position: fixed;
  background-color: #797B7A;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden auto;
  pointer-events: none;
}

<div
  className="c0"
/>
`;

exports[`Storyshots Atoms|Bar different directions 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: black;
  color: white;
  pointer-events: auto;
  height: 2.25rem;
  width: 100%;
  z-index: 0;
}

.c0:hover {
  border-color: #658f7b;
}

<div
    style={
      Object {
        "height": "300px",
      }
    }
  >
    <div
      className="c0"
      direction="HORIZONTAL"
      height="2.25rem"
      width="30rem"
    />
  </div>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: black;
  color: white;
  pointer-events: auto;
  height: 100%;
  width: 30rem;
  z-index: 0;
}

.c0:hover {
  border-color: #658f7b;
}

<div
    style={
      Object {
        "height": "300px",
      }
    }
  >
    <div
      className="c0"
      direction="VERTICAL"
      height="2.25rem"
      width="30rem"
    />
  </div>,
]
`;

exports[`Storyshots Atoms|Bar different variants 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: black;
  color: white;
  pointer-events: auto;
  height: 2.25rem;
  width: 100%;
  z-index: 0;
}

.c0:hover {
  border-color: #658f7b;
}

<div
    className="c0"
    direction="HORIZONTAL"
    height="2.25rem"
    width="30rem"
  />,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: white;
  color: black;
  pointer-events: auto;
  height: 2.25rem;
  width: 100%;
  z-index: 0;
}

.c0:hover {
  border-color: #658f7b;
}

<div
    className="c0"
    direction="HORIZONTAL"
    height="2.25rem"
    width="30rem"
  />,
]
`;

exports[`Storyshots Atoms|Button different sizes 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #fdbe68;
  border-color: #797B7A;
  color: #000000;
  width: 5.33333rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #fdbe68;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="SMALL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #fdbe68;
  border-color: #797B7A;
  color: #000000;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #fdbe68;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #fdbe68;
  border-color: #797B7A;
  color: #000000;
  width: 16rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #fdbe68;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="LARGE"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #fdbe68;
  border-color: #797B7A;
  color: #000000;
  width: 100%;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #fdbe68;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="EXTRA_LARGE"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
]
`;

exports[`Storyshots Atoms|Button different variants 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #797B7A;
  border-color: #658f7b;
  color: #FFFFFF;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #658f7b;
  color: #FFFFFF;
  border-color: #797B7A;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #C8CAC9;
  border-color: #C8CAC9;
  color: #f4f6f4;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #C8CAC9;
  color: #FFFFFF;
  border-color: #C8CAC9;
}

<button
    className="c0"
    disabled={true}
    href={null}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #658f7b;
  border-color: #797B7A;
  color: #FFFFFF;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #658f7b;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #b5decb;
  border-color: #797B7A;
  color: #000000;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #b5decb;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #fdbe68;
  border-color: #797B7A;
  color: #000000;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #fdbe68;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #E2625E;
  border-color: #797B7A;
  color: #FFFFFF;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #E2625E;
}

<button
    className="c0"
    disabled={false}
    onClick={[Function]}
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </button>,
]
`;

exports[`Storyshots Atoms|Button playground 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #797B7A;
  border-color: #658f7b;
  color: #FFFFFF;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #658f7b;
  color: #FFFFFF;
  border-color: #797B7A;
}

<button
  className="c0"
  disabled={false}
  onClick={[Function]}
  size="NORMAL"
  tabIndex={1}
  type="button"
>
  Hello
</button>
`;

exports[`Storyshots Atoms|Button works with links 1`] = `
Array [
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #b5decb;
  border-color: #797B7A;
  color: #000000;
  width: 5.33333rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #b5decb;
}

<a
    className="c0"
    disabled={false}
    href="https://offcourse.io"
    size="SMALL"
    tabIndex={1}
    type="button"
  >
    Hello
  </a>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #b5decb;
  border-color: #797B7A;
  color: #000000;
  width: 8rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #b5decb;
}

<a
    className="c0"
    disabled={false}
    href="https://offcourse.io"
    size="NORMAL"
    tabIndex={1}
    type="button"
  >
    Hello
  </a>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #b5decb;
  border-color: #797B7A;
  color: #000000;
  width: 16rem;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #b5decb;
}

<a
    className="c0"
    disabled={false}
    href="https://offcourse.io"
    size="LARGE"
    tabIndex={1}
    type="button"
  >
    Hello
  </a>,
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.813rem;
  padding: 0.5rem 1rem;
  border: 0;
  border-bottom: 0.125rem solid;
  font-size: 1rem;
  font-family: Nitti Grotesk Bold,Helvetica Bold,sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #b5decb;
  border-color: #797B7A;
  color: #000000;
  width: 100%;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:hover {
  background-color: #797B7A;
  color: #FFFFFF;
  border-color: #b5decb;
}

<a
    className="c0"
    disabled={false}
    href="https://offcourse.io"
    size="EXTRA_LARGE"
    tabIndex={1}
    type="button"
  >
    Hello
  </a>,
]
`;

exports[`Storyshots Atoms|Card can be turned off 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: none;
  background: #FFFFFF;
  border-color: #C8CAC9;
  box-sizing: border-box;
}

.c0:hover {
  border-color: #658f7b;
}

.c0 section:last-child {
  border-bottom: none;
}

<div
  className="c0"
>
  <h1>
    Hello World
  </h1>
</div>
`;

exports[`Storyshots Atoms|Card selectable by default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-bottom: 0.125rem solid;
  background: #FFFFFF;
  border-color: #C8CAC9;
  box-sizing: border-box;
}

.c0:hover {
  border-color: #658f7b;
}

.c0 section:last-child {
  border-bottom: none;
}

<div
  className="c0"
>
  <h1>
    Hello World
  </h1>
</div>
`;

exports[`Storyshots Atoms|Checkbox large 1`] = `
.c1 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0;
  padding: 0;
  line-height: 1;
}

.c1:hover {
  color: #000000;
}

.c1:focus {
  outline: none;
  color: #658f7b;
}

.c0 {
  width: 1.66666667rem;
  height: 1.66666667rem;
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #FFFFFF;
  grid-template-areas: "checkbox";
}

.c0 > input[type="checkbox"] {
  display: none;
}

.c0 > label {
  display: none;
  background-color: #FFFFFF;
  color: #000000;
  width: 1.333333rem;
  height: 1.333333rem;
  grid-area: checkbox;
  box-sizing: border-box;
}

.c0 > input[type="checkbox"]:checked + label {
  display: block;
}

<div
  className="c0"
  onClick={[Function]}
  size="LARGE"
>
  <input
    checked={true}
    readOnly={true}
    type="checkbox"
  />
  <label>
    <i
      className="c1"
      tabIndex={0}
      target="_blank"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 fa-lg "
        data-icon="check"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </i>
  </label>
</div>
`;

exports[`Storyshots Atoms|Checkbox off by default 1`] = `
.c1 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0;
  padding: 0;
  line-height: 1;
}

.c1:hover {
  color: #000000;
}

.c1:focus {
  outline: none;
  color: #658f7b;
}

.c0 {
  width: 1.25rem;
  height: 1.25rem;
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #FFFFFF;
  grid-template-areas: "checkbox";
}

.c0 > input[type="checkbox"] {
  display: none;
}

.c0 > label {
  display: none;
  background-color: #FFFFFF;
  color: #000000;
  width: 1rem;
  height: 1rem;
  grid-area: checkbox;
  box-sizing: border-box;
}

.c0 > input[type="checkbox"]:checked + label {
  display: block;
}

<div
  className="c0"
  onClick={[Function]}
  size="NORMAL"
>
  <input
    checked={false}
    readOnly={true}
    type="checkbox"
  />
  <label>
    <i
      className="c1"
      tabIndex={0}
      target="_blank"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 fa-1x "
        data-icon="check"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </i>
  </label>
</div>
`;

exports[`Storyshots Atoms|Checkbox on 1`] = `
.c1 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0;
  padding: 0;
  line-height: 1;
}

.c1:hover {
  color: #000000;
}

.c1:focus {
  outline: none;
  color: #658f7b;
}

.c0 {
  width: 1.25rem;
  height: 1.25rem;
  display: grid;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #FFFFFF;
  grid-template-areas: "checkbox";
}

.c0 > input[type="checkbox"] {
  display: none;
}

.c0 > label {
  display: none;
  background-color: #FFFFFF;
  color: #000000;
  width: 1rem;
  height: 1rem;
  grid-area: checkbox;
  box-sizing: border-box;
}

.c0 > input[type="checkbox"]:checked + label {
  display: block;
}

<div
  className="c0"
  onClick={[Function]}
  size="NORMAL"
>
  <input
    checked={true}
    readOnly={true}
    type="checkbox"
  />
  <label>
    <i
      className="c1"
      tabIndex={0}
      target="_blank"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check fa-w-16 fa-1x "
        data-icon="check"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </i>
  </label>
</div>
`;

exports[`Storyshots Atoms|Icon large size 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-angle-double-left fa-w-14 fa-lg "
      data-icon="angle-double-left"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-asterisk fa-w-16 fa-lg "
      data-icon="asterisk"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M478.21 334.093L336 256l142.21-78.093c11.795-6.477 15.961-21.384 9.232-33.037l-19.48-33.741c-6.728-11.653-21.72-15.499-33.227-8.523L296 186.718l3.475-162.204C299.763 11.061 288.937 0 275.48 0h-38.96c-13.456 0-24.283 11.061-23.994 24.514L216 186.718 77.265 102.607c-11.506-6.976-26.499-3.13-33.227 8.523l-19.48 33.741c-6.728 11.653-2.562 26.56 9.233 33.037L176 256 33.79 334.093c-11.795 6.477-15.961 21.384-9.232 33.037l19.48 33.741c6.728 11.653 21.721 15.499 33.227 8.523L216 325.282l-3.475 162.204C212.237 500.939 223.064 512 236.52 512h38.961c13.456 0 24.283-11.061 23.995-24.514L296 325.282l138.735 84.111c11.506 6.976 26.499 3.13 33.227-8.523l19.48-33.741c6.728-11.653 2.563-26.559-9.232-33.036z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-calendar-alt fa-w-14 fa-lg "
      data-icon="calendar-alt"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-chevron-down fa-w-14 fa-lg "
      data-icon="chevron-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-chevron-up fa-w-14 fa-lg "
      data-icon="chevron-up"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-chevron-left fa-w-10 fa-lg "
      data-icon="chevron-left"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-chevron-right fa-w-10 fa-lg "
      data-icon="chevron-right"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-bars fa-w-14 fa-lg "
      data-icon="bars"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check fa-w-16 fa-lg "
      data-icon="check"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-envelope fa-w-16 fa-lg "
      data-icon="envelope"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 fa-lg "
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-plus fa-w-14 fa-lg "
      data-icon="plus"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-sort fa-w-10 fa-lg "
      data-icon="sort"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-plus fa-w-14 fa-lg "
      data-icon="plus"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-minus fa-w-14 fa-lg "
      data-icon="minus"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-eye fa-w-18 fa-lg "
      data-icon="eye"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-clock fa-w-16 fa-lg "
      data-icon="clock"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm57.1 350.1L224.9 294c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v137.7l63.5 46.2c5.4 3.9 6.5 11.4 2.6 16.8l-28.2 38.8c-3.9 5.3-11.4 6.5-16.8 2.6z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-file-alt fa-w-12 fa-lg "
      data-icon="file-alt"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 384 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm64 236c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-64c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-72v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm96-114.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 fa-lg "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-rocket fa-w-16 fa-lg "
      data-icon="rocket"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505.05 19.1a15.89 15.89 0 0 0-12.2-12.2C460.65 0 435.46 0 410.36 0c-103.2 0-165.1 55.2-211.29 128H94.87A48 48 0 0 0 52 154.49l-49.42 98.8A24 24 0 0 0 24.07 288h103.77l-22.47 22.47a32 32 0 0 0 0 45.25l50.9 50.91a32 32 0 0 0 45.26 0L224 384.16V488a24 24 0 0 0 34.7 21.49l98.7-49.39a47.91 47.91 0 0 0 26.5-42.9V312.79c72.59-46.3 128-108.4 128-211.09.1-25.2.1-50.4-6.85-82.6zM384 168a40 40 0 1 1 40-40 40 40 0 0 1-40 40z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-search fa-w-16 fa-lg "
      data-icon="search"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-thermometer-empty fa-w-8 fa-lg "
      data-icon="thermometer-empty"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 256 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192 384c0 35.346-28.654 64-64 64s-64-28.654-64-64c0-35.346 28.654-64 64-64s64 28.654 64 64zm32-84.653c19.912 22.563 32 52.194 32 84.653 0 70.696-57.303 128-128 128-.299 0-.609-.001-.909-.003C56.789 511.509-.357 453.636.002 383.333.166 351.135 12.225 321.755 32 299.347V96c0-53.019 42.981-96 96-96s96 42.981 96 96v203.347zM208 384c0-34.339-19.37-52.19-32-66.502V96c0-26.467-21.533-48-48-48S80 69.533 80 96v221.498c-12.732 14.428-31.825 32.1-31.999 66.08-.224 43.876 35.563 80.116 79.423 80.42L128 464c44.112 0 80-35.888 80-80z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-thermometer-half fa-w-8 fa-lg "
      data-icon="thermometer-half"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 256 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192 384c0 35.346-28.654 64-64 64s-64-28.654-64-64c0-23.685 12.876-44.349 32-55.417V224c0-17.673 14.327-32 32-32s32 14.327 32 32v104.583c19.124 11.068 32 31.732 32 55.417zm32-84.653c19.912 22.563 32 52.194 32 84.653 0 70.696-57.303 128-128 128-.299 0-.609-.001-.909-.003C56.789 511.509-.357 453.636.002 383.333.166 351.135 12.225 321.755 32 299.347V96c0-53.019 42.981-96 96-96s96 42.981 96 96v203.347zM208 384c0-34.339-19.37-52.19-32-66.502V96c0-26.467-21.533-48-48-48S80 69.533 80 96v221.498c-12.732 14.428-31.825 32.1-31.999 66.08-.224 43.876 35.563 80.116 79.423 80.42L128 464c44.112 0 80-35.888 80-80z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-thermometer-full fa-w-8 fa-lg "
      data-icon="thermometer-full"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 256 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224 96c0-53.019-42.981-96-96-96S32 42.981 32 96v203.347C12.225 321.756.166 351.136.002 383.333c-.359 70.303 56.787 128.176 127.089 128.664.299.002.61.003.909.003 70.698 0 128-57.304 128-128 0-32.459-12.088-62.09-32-84.653V96zm-96 368l-.576-.002c-43.86-.304-79.647-36.544-79.423-80.42.173-33.98 19.266-51.652 31.999-66.08V96c0-26.467 21.533-48 48-48s48 21.533 48 48v221.498c12.63 14.312 32 32.164 32 66.502 0 44.112-35.888 80-80 80zm64-80c0 35.346-28.654 64-64 64s-64-28.654-64-64c0-23.685 12.876-44.349 32-55.417V96c0-17.673 14.327-32 32-32s32 14.327 32 32v232.583c19.124 11.068 32 31.732 32 55.417z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-video fa-w-18 fa-lg "
      data-icon="video"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M336.2 64H47.8C21.4 64 0 85.4 0 111.8v288.4C0 426.6 21.4 448 47.8 448h288.4c26.4 0 47.8-21.4 47.8-47.8V111.8c0-26.4-21.4-47.8-47.8-47.8zm189.4 37.7L416 177.3v157.4l109.6 75.5c21.2 14.6 50.4-.3 50.4-25.8V127.5c0-25.4-29.1-40.4-50.4-25.8z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-external-link-alt fa-w-18 fa-lg "
      data-icon="external-link-alt"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-facebook fa-w-16 fa-lg "
      data-icon="facebook"
      data-prefix="fab"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-twitter fa-w-16 fa-lg "
      data-icon="twitter"
      data-prefix="fab"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-medium fa-w-14 fa-lg "
      data-icon="medium"
      data-prefix="fab"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 32v448h448V32H0zm372.2 106.1l-24 23c-2.1 1.6-3.1 4.2-2.7 6.7v169.3c-.4 2.6.6 5.2 2.7 6.7l23.5 23v5.1h-118V367l24.3-23.6c2.4-2.4 2.4-3.1 2.4-6.7V199.8l-67.6 171.6h-9.1L125 199.8v115c-.7 4.8 1 9.7 4.4 13.2l31.6 38.3v5.1H71.2v-5.1l31.6-38.3c3.4-3.5 4.9-8.4 4.1-13.2v-133c.4-3.7-1-7.3-3.8-9.8L75 138.1V133h87.3l67.4 148L289 133.1h83.2v5z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
]
`;

exports[`Storyshots Atoms|Icon normal size 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-angle-double-left fa-w-14 fa-1x "
      data-icon="angle-double-left"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-asterisk fa-w-16 fa-1x "
      data-icon="asterisk"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M478.21 334.093L336 256l142.21-78.093c11.795-6.477 15.961-21.384 9.232-33.037l-19.48-33.741c-6.728-11.653-21.72-15.499-33.227-8.523L296 186.718l3.475-162.204C299.763 11.061 288.937 0 275.48 0h-38.96c-13.456 0-24.283 11.061-23.994 24.514L216 186.718 77.265 102.607c-11.506-6.976-26.499-3.13-33.227 8.523l-19.48 33.741c-6.728 11.653-2.562 26.56 9.233 33.037L176 256 33.79 334.093c-11.795 6.477-15.961 21.384-9.232 33.037l19.48 33.741c6.728 11.653 21.721 15.499 33.227 8.523L216 325.282l-3.475 162.204C212.237 500.939 223.064 512 236.52 512h38.961c13.456 0 24.283-11.061 23.995-24.514L296 325.282l138.735 84.111c11.506 6.976 26.499 3.13 33.227-8.523l19.48-33.741c6.728-11.653 2.563-26.559-9.232-33.036z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-calendar-alt fa-w-14 fa-1x "
      data-icon="calendar-alt"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V192H0v272zm320-196c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM192 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12h-40c-6.6 0-12-5.4-12-12v-40zM64 268c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zm0 128c0-6.6 5.4-12 12-12h40c6.6 0 12 5.4 12 12v40c0 6.6-5.4 12-12 12H76c-6.6 0-12-5.4-12-12v-40zM400 64h-48V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H160V16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v48H48C21.5 64 0 85.5 0 112v48h448v-48c0-26.5-21.5-48-48-48z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-chevron-down fa-w-14 fa-1x "
      data-icon="chevron-down"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-chevron-up fa-w-14 fa-1x "
      data-icon="chevron-up"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-chevron-left fa-w-10 fa-1x "
      data-icon="chevron-left"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-chevron-right fa-w-10 fa-1x "
      data-icon="chevron-right"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-bars fa-w-14 fa-1x "
      data-icon="bars"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check fa-w-16 fa-1x "
      data-icon="check"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-envelope fa-w-16 fa-1x "
      data-icon="envelope"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-times fa-w-11 fa-1x "
      data-icon="times"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-plus fa-w-14 fa-1x "
      data-icon="plus"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-sort fa-w-10 fa-1x "
      data-icon="sort"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-plus fa-w-14 fa-1x "
      data-icon="plus"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-minus fa-w-14 fa-1x "
      data-icon="minus"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-eye fa-w-18 fa-1x "
      data-icon="eye"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-clock fa-w-16 fa-1x "
      data-icon="clock"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm57.1 350.1L224.9 294c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h48c6.6 0 12 5.4 12 12v137.7l63.5 46.2c5.4 3.9 6.5 11.4 2.6 16.8l-28.2 38.8c-3.9 5.3-11.4 6.5-16.8 2.6z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-file-alt fa-w-12 fa-1x "
      data-icon="file-alt"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 384 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224 136V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V160H248c-13.2 0-24-10.8-24-24zm64 236c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-64c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12v8zm0-72v8c0 6.6-5.4 12-12 12H108c-6.6 0-12-5.4-12-12v-8c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm96-114.1v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-question-circle fa-w-16 fa-1x "
      data-icon="question-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-rocket fa-w-16 fa-1x "
      data-icon="rocket"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505.05 19.1a15.89 15.89 0 0 0-12.2-12.2C460.65 0 435.46 0 410.36 0c-103.2 0-165.1 55.2-211.29 128H94.87A48 48 0 0 0 52 154.49l-49.42 98.8A24 24 0 0 0 24.07 288h103.77l-22.47 22.47a32 32 0 0 0 0 45.25l50.9 50.91a32 32 0 0 0 45.26 0L224 384.16V488a24 24 0 0 0 34.7 21.49l98.7-49.39a47.91 47.91 0 0 0 26.5-42.9V312.79c72.59-46.3 128-108.4 128-211.09.1-25.2.1-50.4-6.85-82.6zM384 168a40 40 0 1 1 40-40 40 40 0 0 1-40 40z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-search fa-w-16 fa-1x "
      data-icon="search"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-thermometer-empty fa-w-8 fa-1x "
      data-icon="thermometer-empty"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 256 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192 384c0 35.346-28.654 64-64 64s-64-28.654-64-64c0-35.346 28.654-64 64-64s64 28.654 64 64zm32-84.653c19.912 22.563 32 52.194 32 84.653 0 70.696-57.303 128-128 128-.299 0-.609-.001-.909-.003C56.789 511.509-.357 453.636.002 383.333.166 351.135 12.225 321.755 32 299.347V96c0-53.019 42.981-96 96-96s96 42.981 96 96v203.347zM208 384c0-34.339-19.37-52.19-32-66.502V96c0-26.467-21.533-48-48-48S80 69.533 80 96v221.498c-12.732 14.428-31.825 32.1-31.999 66.08-.224 43.876 35.563 80.116 79.423 80.42L128 464c44.112 0 80-35.888 80-80z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-thermometer-half fa-w-8 fa-1x "
      data-icon="thermometer-half"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 256 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M192 384c0 35.346-28.654 64-64 64s-64-28.654-64-64c0-23.685 12.876-44.349 32-55.417V224c0-17.673 14.327-32 32-32s32 14.327 32 32v104.583c19.124 11.068 32 31.732 32 55.417zm32-84.653c19.912 22.563 32 52.194 32 84.653 0 70.696-57.303 128-128 128-.299 0-.609-.001-.909-.003C56.789 511.509-.357 453.636.002 383.333.166 351.135 12.225 321.755 32 299.347V96c0-53.019 42.981-96 96-96s96 42.981 96 96v203.347zM208 384c0-34.339-19.37-52.19-32-66.502V96c0-26.467-21.533-48-48-48S80 69.533 80 96v221.498c-12.732 14.428-31.825 32.1-31.999 66.08-.224 43.876 35.563 80.116 79.423 80.42L128 464c44.112 0 80-35.888 80-80z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-thermometer-full fa-w-8 fa-1x "
      data-icon="thermometer-full"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 256 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M224 96c0-53.019-42.981-96-96-96S32 42.981 32 96v203.347C12.225 321.756.166 351.136.002 383.333c-.359 70.303 56.787 128.176 127.089 128.664.299.002.61.003.909.003 70.698 0 128-57.304 128-128 0-32.459-12.088-62.09-32-84.653V96zm-96 368l-.576-.002c-43.86-.304-79.647-36.544-79.423-80.42.173-33.98 19.266-51.652 31.999-66.08V96c0-26.467 21.533-48 48-48s48 21.533 48 48v221.498c12.63 14.312 32 32.164 32 66.502 0 44.112-35.888 80-80 80zm64-80c0 35.346-28.654 64-64 64s-64-28.654-64-64c0-23.685 12.876-44.349 32-55.417V96c0-17.673 14.327-32 32-32s32 14.327 32 32v232.583c19.124 11.068 32 31.732 32 55.417z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-video fa-w-18 fa-1x "
      data-icon="video"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M336.2 64H47.8C21.4 64 0 85.4 0 111.8v288.4C0 426.6 21.4 448 47.8 448h288.4c26.4 0 47.8-21.4 47.8-47.8V111.8c0-26.4-21.4-47.8-47.8-47.8zm189.4 37.7L416 177.3v157.4l109.6 75.5c21.2 14.6 50.4-.3 50.4-25.8V127.5c0-25.4-29.1-40.4-50.4-25.8z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-external-link-alt fa-w-18 fa-1x "
      data-icon="external-link-alt"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 576 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 0 0 384 303.765V448H64V128h264a24.003 24.003 0 0 0 16.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-facebook fa-w-16 fa-1x "
      data-icon="facebook"
      data-prefix="fab"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-twitter fa-w-16 fa-1x "
      data-icon="twitter"
      data-prefix="fab"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
  .c0 {
  box-sizing: border-box;
  color: #000000;
  background-color: transparent;
  border: 0;
  font-size: 1;
  margin: 0 0.5rem;
  padding: 0;
  line-height: 1;
}

.c0:hover {
  color: #658f7b;
}

.c0:focus {
  outline: none;
  color: #658f7b;
}

<button
    className="c0"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-medium fa-w-14 fa-1x "
      data-icon="medium"
      data-prefix="fab"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 32v448h448V32H0zm372.2 106.1l-24 23c-2.1 1.6-3.1 4.2-2.7 6.7v169.3c-.4 2.6.6 5.2 2.7 6.7l23.5 23v5.1h-118V367l24.3-23.6c2.4-2.4 2.4-3.1 2.4-6.7V199.8l-67.6 171.6h-9.1L125 199.8v115c-.7 4.8 1 9.7 4.4 13.2l31.6 38.3v5.1H71.2v-5.1l31.6-38.3c3.4-3.5 4.9-8.4 4.1-13.2v-133c.4-3.7-1-7.3-3.8-9.8L75 138.1V133h87.3l67.4 148L289 133.1h83.2v5z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>,
]
`;
